# ci-test

./: Cargo.toml  Makefile.toml  flake.nix  package.json  pnpm-lock.yaml
.github/workflows/: publish.yaml  publishApk.yaml  test.yaml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
